# ChangeLog for app-crypt/seahorse
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/seahorse/ChangeLog,v 1.113 2009/03/17 08:57:17 nirbheek Exp $

*seahorse-2.24.1 (17 Mar 2009)

  17 Mar 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  +seahorse-2.24.1.ebuild:
  Add seahorse-2.24.1 from gnome overlay (p.masked, gnome-session-2.24)

  13 Nov 2008; Brent Baude <ranger@gentoo.org> seahorse-2.22.3.ebuild:
  Marking seahorse-2.22.3 ppc64 stable for bug 236971

  25 Sep 2008; Jeroen Roovers <jer@gentoo.org> seahorse-2.22.3.ebuild:
  Stable for HPPA (bug #236971).

  04 Sep 2008; Arun Raghavan <ford_prefect@gentoo.org>
  seahorse-2.22.3.ebuild:
  Set --with-gecko independent of USE=-dbus (fixes bug #223497). Thanks to
  Pacho Ramos for pointing this out.

  12 Aug 2008; Raúl Porcel <armin76@gentoo.org> seahorse-2.22.3.ebuild:
  alpha/ia64/sparc stable wrt #229709

  10 Aug 2008; Markus Meier <maekke@gentoo.org> seahorse-2.22.3.ebuild:
  x86 stable, bug #229709

  31 Jul 2008; Gilles Dartiguelongue <eva@gentoo.org> metadata.xml,
  -seahorse-2.22.1.ebuild, -seahorse-2.22.2.ebuild, seahorse-2.22.3.ebuild:
  remove old revisions, add xulrunner USE flag per bug #223497.

  30 Jul 2008; Brent Baude <ranger@gentoo.org> seahorse-2.22.3.ebuild:
  Marking seahorse-2.22.3 ppc stable for bug 229709

  26 Jul 2008; Olivier Crête <tester@gentoo.org> seahorse-2.22.3.ebuild:
  Stable on amd64, bug #229709

  14 Jul 2008; Alexis Ballier <aballier@gentoo.org> seahorse-2.22.3.ebuild:
  keyword ~x86-fbsd

*seahorse-2.22.3 (02 Jul 2008)

  02 Jul 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +seahorse-2.22.3.ebuild:
  bump to 2.22.3. Translation updates.

  15 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +files/seahorse-2.22.2-fbsd.patch, seahorse-2.22.2.ebuild:
  fix compilation on fbsd, bug #224591.

  15 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org>