@@ -2,10 +2,6 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>gnome</herd>
-<maintainer>
-	<email>compnerd@gentoo.org</email>
-	<name>Saleem Abdulrasool</name>
-</maintainer>
 <use>
 	<flag name="applet">Enable seahorse applet for
 	<pkg>gnome-base/gnome-panel</pkg>.</flag>
