@@ -3,7 +3,6 @@
 <pkgmetadata>
 	<herd>no-herd</herd>
 	<maintainer>
-		<email>compnerd@gentoo.org</email>
-		<name>Saleem Abdulrasool</name>
-	</maintainer>
+		<email>maintainer-needed@gentoo.org</email>
+		</maintainer>
 </pkgmetadata>
