@@ -1,6 +1,10 @@
 # ChangeLog for app-editors/leafpad
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/leafpad/ChangeLog,v 1.19 2008/09/03 16:36:54 compnerd Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-editors/leafpad/ChangeLog,v 1.20 2009/03/20 03:15:46 jmbsvicetto Exp $
+
+  20 Mar 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
+  metadata.xml:
+  Removing compnerd as a maintainer since he was retired.
 
   03 Sep 2008; Saleem Abdulrasool <compnerd@gentoo.org>
   leafpad-0.8.14.ebuild:
